package es.uniovi.dlp.ast.types;

public class ArrayType extends AbstractType {
    private Type type;
    private int size;

    public ArrayType (int line, int column, Type type, int size)
    {
        super(line,column);
        this.type=type;
        this.size=size;
    }


    public Type getType() {
        return type;
    }

    public void setType(Type type) {
        this.type = type;
    }
}
